@startuml

class Customer {
id: long
paymentInfo: String
}

class Vehicle {
  id: long
  vin: Vin
  owner: Customer
  offeredServices: List<Service>
}

class Service{
id:long
name:String
}


class UsageRight {
  id: long
  startDate: Date
  endDate: Date
  coveredService:Service
  coveredVehicle:Vehicle
  coveredCustomer:Customer
  fromProduct: Product
  fromOrder: Order
}

class Product {
  id: long
  articleNumber: ArticleNumber
  price: Price
  includedServices: List<Service>
}
class ProductConfig {
  id: long
  product:Product
  duration: int
}

class Order{
id: long
isPayed: boolean
paymentDate: Date
canceled: boolean
canceledOn: Date
vehicle: Vehicle
customer: Customer
totalPrice: Price
productConfig: List<ProductConfig>
date: Date
}

Vehicle "0..1" --> "1" Customer : owned by
Vehicle "0..*" --> "1..*" Service : offers
UsageRight "1" --> "1" Service : covers
UsageRight "1" --> "1" Vehicle : covers
UsageRight "1" --> "1" Customer : covers
UsageRight  -->  Order : from
UsageRight  -->  Product : from
Product "1" --> "1..*" Service : includes
ProductConfig "1" --> "1" Product : configures
Order "1" --> "1" Customer : placed by
Order "1" --> "1" Vehicle : for
Order "1" --> "0..*" ProductConfig : includes


@enduml